Add link to Contact page to the navbar

--- a/application/views/themes/clean-blog/layout.twig
+++ b/application/views/themes/clean-blog/layout.twig
@@ -60,6 +60,9 @@
               </li>
             {% endfor %}
 				  {% endif %}
+          <li class="nav-item">
+              <a class="nav-link" href="{{base_url}}contact">Contact</a>
+            </li>
         </ul>
       </div>
     </div>
