--- a/application/views/themes/clean-blog/layout.twig
+++ b/application/views/themes/clean-blog/layout.twig
@@ -61,8 +61,8 @@
             {% endfor %}
 				  {% endif %}
           <li class="nav-item">
-              <a class="nav-link" href="{{base_url}}contact">Contact</a>
-            </li>
+            <a class="nav-link" href="{{base_url}}contact">Contact</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -151,6 +151,8 @@
   <script src="{{base_url}}themes/{{theme_directory}}/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- Custom scripts for this template -->
   <script src="{{base_url}}themes/{{theme_directory}}/assets/js/clean-blog.min.js"></script>
+  <script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.validate.min.js"></script>
+  <script src="{{base_url}}assets/js/ajaxform.js"></script>
   {% if is_cookieconsent == true %} 
     <script>
         window.cookieconsent.initialise({
