--- a/application/views/themes/clean-blog/layout.twig
+++ b/application/views/themes/clean-blog/layout.twig
@@ -152,7 +152,7 @@
   <!-- Custom scripts for this template -->
   <script src="{{base_url}}themes/{{theme_directory}}/assets/js/clean-blog.min.js"></script>
   <script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.validate.min.js"></script>
-  <script src="{{base_url}}assets/js/ajaxform.js"></script>
+  <script src="{{base_url}}/themes/{{theme_directory}}/assets/js/ajaxform.js"></script>
   {% if is_cookieconsent == true %} 
     <script>
         window.cookieconsent.initialise({
