--- a/application/views/themes/clean-blog/templates/contact.twig
+++ b/application/views/themes/clean-blog/templates/contact.twig
@@ -45,6 +45,6 @@
 										<textarea rows="5" class="form-control px-1" placeholder="Message" name="message" id="message" data-rule-required="true">{{set_value('message')}}</textarea>
 									</div>
 								</div>
-								<button type="submit" class="btn btn-block btn-primary" id="sendMessageButton">Send</button>
+								<button type="submit" class="btn btn-block btn-primary rounded-0" id="sendMessageButton">Send</button>
 	</form>
 </div>
