Set home to base_url

--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -14,7 +14,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<div class="logo"><a href="/">{{site_title}}</a></div>
+			<div class="logo"><a href="{{base_url}}">{{site_title}}</a></div>
 		</header>
 
 		<section id="main">
