Get common scripts (form validator, ajax form submit) from a common directory (/assets/js)

--- a/application/views/themes/caminar/layout.twig
+++ b/application/views/themes/caminar/layout.twig
@@ -57,9 +57,9 @@
 			</div>
 		</footer>
 
-		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.min.js"></script>
-		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/jquery.validate.min.js"></script>
-		<script src="{{base_url}}/themes/{{theme_directory}}/assets/js/ajaxform.js"></script>
+		<script src="{{base_url}}/assets/js/jquery.min.js"></script>
+		<script src="{{base_url}}/assets/js/jquery.validate.min.js"></script>
+		<script src="{{base_url}}/assets/js/ajaxform.js"></script>
 		{% if is_cookieconsent == true %} 
     <script>
         window.cookieconsent.initialise({
