--- a/application/views/themes/clean-blog/layout.twig
+++ b/application/views/themes/clean-blog/layout.twig
@@ -153,34 +153,34 @@
   <script src="{{base_url}}themes/{{theme_directory}}/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="{{base_url}}themes/{{theme_directory}}/assets/js/clean-blog.min.js"></script>
   {% if is_cookieconsent == true %} 
-    <script>
-        window.cookieconsent.initialise({
-        container: document.getElementById("cookieconsent"),
-        palette:{
-        popup: {background: "#0068BB"},
-        button: {background: "#fff"},
-        },
-        revokable: true,
-        onStatusChange: function(status) {
-        console.log(this.hasConsented() ?
-          'enable cookies' : 'disable cookies');
-        },
-        "position": "bottom-left",
-        "theme": "classic",
-        "secure": true,
-        "content": {
-          "header": 'Cookies used on the website!',
-          "message": 'This website uses cookies to improve your experience.',
-          "dismiss": 'Got it!',
-          "allow": 'Allow cookies',
-          "deny": 'Decline',
-          "link": 'Learn more',
-          "close": '&#x274c;',
-          "policy": 'Cookie Policy',
-          "target": '_blank',
-          }
-      });
-    </script>
+  <script>
+      window.cookieconsent.initialise({
+      container: document.getElementById("cookieconsent"),
+      palette:{
+      popup: {background: "#323232"},
+      button: {background: "#41B883"},
+      },
+      revokable: true,
+      onStatusChange: function(status) {
+      console.log(this.hasConsented() ?
+        'enable cookies' : 'disable cookies');
+      },
+      "position": "bottom-left",
+      "theme": "classic",
+      "secure": true,
+      "content": {
+        "header": 'Cookies used on the website!',
+        "message": 'This website uses cookies to improve your experience.',
+        "dismiss": 'Accept cookies!',
+        "allow": 'Allow cookies',
+        "deny": 'Decline',
+        "link": 'Learn more',
+        "close": '&#x274c;',
+        "policy": 'Cookie Policy',
+        "target": '_blank',
+        }
+    });
+  </script>
   {% endif %}
 </body>
 
