--- a/application/views/themes/caminar/templates/contact.twig
+++ b/application/views/themes/caminar/templates/contact.twig
@@ -32,23 +32,23 @@
 								novalidate>
 								<div class="row uniform">	
 									<div class="form-controll 12u$">
-										<input type="text" class="form-control px-1 {{ form_error('name') ? 'error' }}" placeholder="Name" name="name" id="name" value="{{set_value('name' )}}" data-rule-required="true">
+										<input type="text" class="form-control px-1 {{ form_error('name') ? 'error' }}" placeholder="Name" name="name" id="name" value="{{set_value('name') | striptags}}" data-rule-required="true">
 										{{ form_error('name') ? form_error('name') }}
 									</div>
 
 									<div class="form-controll 12u$">
-										<input type="email" class="form-control px-1 {{ form_error('email') ? 'error' }}" placeholder="Email" name="email" id="email" value="{{set_value('email' )}}" data-rule-required="true">
+										<input type="email" class="form-control px-1 {{ form_error('email') ? 'error' }}" placeholder="Email" name="email" id="email" value="{{set_value('email') | striptags}}" data-rule-required="true">
 										{{ form_error('email') ? form_error('email') }}
 									</div>
 								</div>
 								<div class="row uniform">	
 									<div class="form-controll 12u$">
-										<input type="text" class="form-control px-1 {{ form_error('subject') ? 'error' }}" placeholder="Subject" name="subject" id="subject" value="{{set_value('subject' )}}" data-rule-required="true">
+										<input type="text" class="form-control px-1 {{ form_error('subject') ? 'error' }}" placeholder="Subject" name="subject" id="subject" value="{{set_value('subject') | striptags}}" data-rule-required="true">
 										{{ form_error('subject') ? form_error('subject') }}
 									</div>
 
 									<div class="form-controll 12u$">
-										<textarea rows="5" class="form-control px-1 {{ form_error('message') ? 'error' }}" placeholder="Message" name="message" id="message" data-rule-required="true">{{set_value('message')}}</textarea>
+										<textarea rows="5" class="form-control px-1 {{ form_error('message') ? 'error' }}" placeholder="Message" name="message" id="message" data-rule-required="true">{{set_value('message') | striptags}}</textarea>
 										{{ form_error('message') ? form_error('message') }}
 									</div>
 
