--- a/application/views/themes/clean-blog/templates/contact.twig
+++ b/application/views/themes/clean-blog/templates/contact.twig
@@ -27,22 +27,22 @@
 								novalidate>		
 								<div class="control-group mb-3">
 									<div class="form-group pb-0">
-										<input type="text" class="form-control px-1" placeholder="Name" name="name" id="name" data-rule-required="true" value="{{set_value('name')}}">
+										<input type="text" class="form-control px-1" placeholder="Name" name="name" id="name" data-rule-required="true" value="{{set_value('name') | striptags}}">
 									</div>
 								</div>
 								<div class="control-group mb-3">
 									<div class="form-group pb-0">
-										<input type="email" class="form-control px-1" placeholder="Email" name="email" id="email" data-rule-required="true" value="{{set_value('email')}}">
+										<input type="email" class="form-control px-1" placeholder="Email" name="email" id="email" data-rule-required="true" value="{{set_value('email') | striptags}}">
 									</div>
 								</div>
 								<div class="control-group mb-3">
 									<div class="form-group pb-0">
-										<input type="text" class="form-control px-1" placeholder="Subject" name="subject" id="subject"  data-rule-required="true" value="{{set_value('subject')}}">
+										<input type="text" class="form-control px-1" placeholder="Subject" name="subject" id="subject"  data-rule-required="true" value="{{set_value('subject') | striptags}}">
 									</div>
 								</div>
 								<div class="control-group mb-3">
 									<div class="form-group pb-0">
-										<textarea rows="5" class="form-control px-1" placeholder="Message" name="message" id="message" data-rule-required="true">{{set_value('message')}}</textarea>
+										<textarea rows="5" class="form-control px-1" placeholder="Message" name="message" id="message" data-rule-required="true">{{set_value('message') | striptags}}</textarea>
 									</div>
 								</div>
 								<button type="submit" class="btn btn-block btn-primary rounded-0" id="sendMessageButton">Send</button>
