--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,95 @@ table a {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
 }
 
+#switchContainer {
+  display: flex;
+  align-items: center;
+}
+
+.switch-toggle {
+  display: inline-block;
+}
+
+.switch-toggle input[type=checkbox] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+  position: absolute;
+}
+
+.switch-toggle label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 70px;
+  max-width: 70px;
+  height: 30px;
+  line-height: 20px;
+  background: #ccc;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+  box-shadow: inset 1px 1px 3px 0px rgba(0, 0, 0, 0.25);
+}
+
+.switch-toggle label:after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 26px;
+  height: 26px;
+  background: #f6f6f6;
+  background: -moz-linear-gradient(top, #f6f6f6 0%, #efefef 100%);
+  background: -webkit-linear-gradient(top, #f6f6f6 0%, #efefef 100%);
+  background: linear-gradient(to bottom, #f6f6f6 0%, #efefef 100%);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, .2);
+  transition: 0.2s;
+}
+
+.switch-toggle input:checked+label,
+.switch-toggle input:checked+input+label {
+  background: #28a745;
+}
+
+.switch-toggle input:checked+label:after {
+  border: 0;
+}
+
+.switch-toggle input+label:before,
+.switch-toggle input+input+label:before {
+  content: 'No';
+  position: absolute;
+  top: 5px;
+  left: 35px;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  transition: 0.2s;
+  text-indent: 0;
+  color: #fff;
+}
+
+.switch-toggle input:checked+label:before,
+.switch-toggle input:checked+input+label:before {
+  content: 'Yes';
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  transition: 0.2s;
+  text-indent: 0;
+  color: #fff;
+}
+
+.switch-toggle input:checked+label:after,
+.switch-toggle input:checked+input+label:after {
+  left: calc(100% - 2px);
+  transform: translateX(-100%);
+}
+
 /* Footer */
 .site-footer-wrapper {
   margin-top: auto;
