--- a/application/views/themes/caminar/templates/singlepost.twig
+++ b/application/views/themes/caminar/templates/singlepost.twig
@@ -12,7 +12,7 @@
 		</p>
 
 		<div class="image fit">
-			<img src="/assets/img/posts/{{post.post_image}}" alt="{{post.title}}">
+			<img src="{{base_url}}/assets/img/posts/{{post.post_image}}" alt="{{post.title}}">
 		</div>
 
 		<div class="post-content">
