Use theame directory variable in path to image

--- a/application/views/themes/caminar/templates/contact.twig
+++ b/application/views/themes/caminar/templates/contact.twig
@@ -2,7 +2,7 @@
 	<div class="content">
 	
 		<div class="contact image fit flush">
-			<img src="{{base_url}}themes/caminar/assets/images/woman-with-laptop.jpg" alt="Contact">
+			<img src="{{base_url}}themes/{{theme_directory}}/assets/images/woman-with-laptop.jpg" alt="Contact">
 		</div>
 
 		<h2>Contact us</h2>
