Add placeholder to textarea too

--- a/application/views/themes/caminar/partials/comments.twig
+++ b/application/views/themes/caminar/partials/comments.twig
@@ -20,7 +20,7 @@
 								<input type="email" name="email" id="email" placeholder="Email" data-rule-required="true" />
 							</div>
 							<div class="form-controll 12u$">
-								<textarea name="message" rows="6" id="message" data-rule-required="true"></textarea>
+								<textarea name="message" rows="6" id="message" placeholder="Your Message" data-rule-required="true"></textarea>
 							</div>
 							<div class="12u$">
 								<input type="submit" value="Add comment" class="button special fit" />
