--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,7 +437,7 @@ table a {
   visibility: hidden;
 }
 .file-upload-btn::before {
-  content: 'Upload image';
+  content: 'Choose file';
   display: inline-block;
   background-color: #28a745;
   border-color: #28a745;
@@ -462,7 +462,6 @@ table a {
   font-style: normal;
   font-weight: normal;
   text-decoration: inherit;
-/*--adjust as necessary--*/
   color: #fff;
   font-size: 16px;
   padding-right:12px;
