--- a/application/views/themes/calvin/templates/contact.twig
+++ b/application/views/themes/calvin/templates/contact.twig
@@ -35,13 +35,15 @@
 														</div>
 													{% endif %}
 
-													<div id="msgContainer" class="is-hidden alert-box alert-box--success text-center"></div>
+													<div id="msgContainer" class="is-hidden text-center alert-box alert-box--success"></div>
 
 													<form name="contactForm" id="ajaxForm" class="s-content__form"
 															action="{{base_url}}contact"
 																method="post"
+																data-successclass="alert-box--success"
+																data-failclass="alert-box--error"
 																	data-successmsg="Your message was sent. We will reply as soon as possible." 
-																		data-failmsg="Sorry, we could not deliver your message"
+																	data-failmsg="Sorry, we could not deliver your message"
 																			novalidate>
 																			<fieldset>		
 																				<div class="form-field">
@@ -57,8 +59,9 @@
 																						<textarea rows="5" class="h-full-width" placeholder="Message" name="message" id="message" data-rule-required="true">{{set_value('message') | striptags}}</textarea>
 																				</div>
 																				<button type="submit" class="submit btn btn--primary h-full-width" id="sendMessageButton">Send</button>
-																			<fieldset>
+																			</fieldset>
 													</form>
+											
 											</div><!-- end s-entry__page-content -->		
 
                     </div> <!-- end s-content__primary -->
