--- a/application/views/themes/calvin/layout.twig
+++ b/application/views/themes/calvin/layout.twig
@@ -165,23 +165,18 @@
                     <h5>Sign Up for Newsletter</h5>
                     <p>Signup to get updates on articles, interviews and events.</p>
                     <div class="subscribe-form">
-                
-                        <form id="mc-form" class="group" novalidate="true">
-
-                            <input type="email" value="" name="dEmail" class="email" id="mc-email" placeholder="Your Email Address" required=""> 
-                
-                            <input type="submit" name="subscribe" value="subscribe" >
-                
-                            <label for="mc-email" class="subscribe-message"></label>
-                
+												<div id="messags" class="is-hidden h-text-center">
+													 <div class="success is-hidden alert-box alert-box--success">You have successfully subscribed to our newsletter</div>
+													 <div class="notnew is-hidden alert-box alert-box--info">You are already subscribed</div>
+													 <div class="fail is-hidden alert-box alert-box--error">Sorry, the newsletter subscription filed</div>
+												</div>
+                        <form name="newsletter" method="post" action="{{base_url}}newsletter/subscribe" id="newsletterForm" class="group" novalidate>
+													<input type="email" name="email" class="email" value="{{set_value('email') | striptags}}" data-rule-required="true" placeholder="Your Email Address"> 
+													<input type="submit" name="subscribe" value="subscribe">
                         </form>
-
                     </div>
-
                 </div> <!-- end s-footer__subscribe -->
-
             </div> <!-- end row -->
-
         </div> <!-- end s-footer__main -->
 
         <div class="s-footer__bottom">
@@ -211,6 +206,7 @@
     <script src="{{base_url}}themes/{{theme_directory}}/assets/js/main.js"></script>
 		<script src="{{base_url}}/assets/js/jquery.validate.min.js"></script>
 		<script src="{{base_url}}/assets/js/ajaxform.js"></script>
+		<script src="{{base_url}}/assets/js/newsletter.js"></script>
 		{% if is_cookieconsent == true %} 
     <script>
         window.cookieconsent.initialise({
@@ -241,7 +237,5 @@
       });
     </script>
   	{% endif %}
-
 </body>
-
 </html>
