Show 'No more posts to load' message

--- a/application/views/themes/clean-blog/partials/posts-lists.twig
+++ b/application/views/themes/clean-blog/partials/posts-lists.twig
@@ -1,6 +1,6 @@
 {% if posts %}
 	{% if is_ajax_loading %}
-	<div id="postsContainer">
+	<div id="postsContainer" data-max-page="{{max_page}}">
 	{% endif %}
 		{% for post in posts %}
 			<div class="post-preview">
